name: gnome-keyring
version: 0.1
synopsis: Bindings for libgnome-keyring
license: GPL
license-file: License.txt
author: John Millikin
maintainer: jmillikin@gmail.com
build-type: Simple
cabal-version: >=1.2
category: Desktop

library
  ghc-options: -Wall
  build-depends:
      base >=4 && < 5
    , text

  build-tools: c2hs
  exposed-modules:
    Gnome.Keyring
    Gnome.Keyring.Keyring
    Gnome.Keyring.KeyringInfo
    Gnome.Keyring.Operation

  other-modules:
    Gnome.Keyring.FFI
    Gnome.Keyring.KeyringInfo.Internal
    Gnome.Keyring.Misc
    Gnome.Keyring.Operation.Internal
    Gnome.Keyring.Types

  extra-libraries: gnome-keyring
  pkgconfig-depends: gnome-keyring-1
